# Spotify-Stats

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  src.typ
benches/: benchmark.rs
full_data/: 2023.json  Streaming_History_Audio_2023_6.json
full_data/Spotify Extended Streaming History/: Streaming_History_Video_2018-2023.json
src/: main.rs  readme_gen.rs  tests.rs
src/lib/: mod.rs
src/lib/gui/: mod.rs
src/lib/model/: compression.rs  end_stream.rs  mod.rs  raw_streaming_data.rs  streaming_data.rs
src/lib/serde/: deserialization.rs  mod.rs  serialization.rs
src/model/: mod.rs  raw_streaming_data.rs  streaming_data.rs
src/serde/: deserialization.rs  serialization.rs
