[package]
name = "spotify_stats"
version = "0.1.0"
edition = "2021"
authors = ["Arno Werkman"]
description = "Command Line Interface that can process your Spotify Streaming Data"
license = "MIT"
repository = "https://github.com/BroodjeKroepoek/Spotify-Stats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
belly = { git = "https://github.com/jkb0o/belly", version = "0.3.0" }
bevy = "0.11.3"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
comfy-table = "7.0.1"
postcard = { version = "1.0.8", features = ["use-std"] }
postcard-derive = "0.1.1"
serde = { version = "1.0.188", features = ["derive"] }

[lib]
path = "src/lib/mod.rs"

[profile.release]
strip = true
codegen-units = 1
lto = true
panic = "abort"
