[package]
name = "spotify_stats"
version = "0.1.0"
edition = "2021"
authors = ["Arno Werkman"]
description = "Command Line Interface that can process your Spotify Streaming Data"
license = "MIT"
repository = "https://github.com/BroodjeKroepoek/Spotify-Stats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
comfy-table = "7.0.1"
flate2 = "1.0.28"
rmp-serde = "1.1.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["preserve_order"] }

[lib]
path = "src/lib/mod.rs"

[profile.release]
strip = true
codegen-units = 1
lto = true
panic = "abort"
